kubernetes/analytics-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics
  template:
    metadata:
      labels:
        app: analytics
    spec:
      containers:
      - name: analytics
        image: chooladeva/analytics-service:latest
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /api/analytics/health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/analytics/health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
spec:
  selector:
    app: analytics
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
