kubernetes/analytics-service-green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics
      version: green
  template:
    metadata:
      labels:
        app: analytics
        version: green
    spec:
      containers:
        - name: analytics
          image: chooladeva/analytics-service:latest
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /api/analytics/health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/analytics/health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service-green
spec:
  selector:
    app: analytics
    version: green
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
