kubernetes/lugx-frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lugx-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lugx-frontend
  template:
    metadata:
      labels:
        app: lugx-frontend
    spec:
      containers:
        - name: lugx-nginx-container
          image: chooladeva/lugx-nginx-static:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: lugx-frontend-service
spec:
  type: ClusterIP
  selector:
    app: lugx-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
