kubernetes/order-service-green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
      version: green
  template:
    metadata:
      labels:
        app: order-service
        version: green
    spec:
      containers:
        - name: order-service
          image: chooladeva/order-service:latest
          ports:
            - containerPort: 8001
          livenessProbe:
            httpGet:
              path: /api/orders/health
              port: 8001
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/orders/health
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-green
spec:
  selector:
    app: order-service
    version: green
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: ClusterIP
