kubernetes/lugx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lugx-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: mylugxtestdomain.duckdns.org
      http:
        paths:
          - path: /api/analytics/
            pathType: Prefix
            backend:
              service:
                name: analytics-service-green
                port:
                  number: 8000
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: order-service-green
                port:
                  number: 8001
          - path: /api/games
            pathType: Prefix
            backend:
              service:
                name: game-service-green
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lugx-frontend-service
                port:
                  number: 80
